--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,8 @@
     "mongoose": "^8.16.0",
     "next": "15.3.3",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
