--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@clerk/nextjs": "^6.22.0",
     "@clerk/themes": "^2.2.51",
     "axios": "^1.10.0",
+    "framer-motion": "^12.22.0",
     "mongoose": "^8.16.0",
     "next": "15.3.3",
     "react": "^19.0.0",
